--- a/templates/mp.html
+++ b/templates/mp.html
@@ -63,7 +63,7 @@
     </div>
     <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
       <div class="card-body">
-	{{ res['a']|safe }}
+	{% for item in res %}{{res[item]|safe}}{% endfor %}
       </div>
     </div>
   </div>
@@ -83,7 +83,10 @@
   </div>
 </div>
 
-{{ res['a']|safe }}
+
+{% for item in res %}
+{{res[item]|safe}}
+{% endfor %}
 {% endblock %}
 
 </body>
